[project]
name = "hello-mcp"
version = "0.1.0"
description = "A minimal Hello World MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.9.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hello-mcp = "hello_mcp:main"
